# DataEngineeringZoomcamp

./: .gitignore  pyproject.toml
Week1/: .Dockerfile  README.md  data_ingest.py  homework-pt2.md  homework.MD  pyproject.toml  upload-data.ipynb
Week2/: .Dockerfile  README.md  etl_parent_flow-deployment.yaml  etl_web_to_gcs_parent_flow-deployment.yaml  pyproject.toml
Week2/homework/: parametrized_etl_web_to_gcs.py  solution.md
Week3/homework/: prepare_data.sh  solution.md
